Fix username column overflow

--- a/resources/css/bem/beatmap-scoreboard-table.less
+++ b/resources/css/bem/beatmap-scoreboard-table.less
@@ -155,6 +155,13 @@
     align-items: center;
     color: var(--default-color);
     padding: 0 var(--padding-h);
+    gap: 5px;
+    position: relative;
+
+    &--bg-link {
+      position: absolute;
+      inset: 0;
+    }
 
     &--grade {
       justify-content: center;
@@ -181,12 +188,6 @@
 
     &--time {
       white-space: nowrap;
-    }
-
-    &--user-link {
-      position: absolute;
-      display: flex;
-      gap: 5px;
     }
 
     &--zero {
